--- a/evonsys/test-output/old/Suite/classes.html
+++ b/evonsys/test-output/old/Suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.evonsys.citi.runnerClasses.HCM_LoginRunner</td>
+<td>com.evonsys.citi.runnerClasses.HCM_Employee</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
